--- a/invester.html
+++ b/invester.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="investor">
   <header class="zomato-nav-header">
     <nav class="zomato-nav-header-wrapper">
       <div class="logo">zomato</div>
@@ -497,6 +498,7 @@
       2008-2024 ©️ Zomato™️ Ltd. All rights reserv
     </div>
   </footer>
+    </div>
 </body>
 
 </html>
