--- a/invester.html
+++ b/invester.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Investor</title>
-  <link rel="stylesheet" href="/styles/investor/invesrter.css" />
+  <link rel="stylesheet" href="/styles/investor/invester.css" />
 </head>
 
-<body>
-  <div class="investor">
+<body><div class="investor">
   <header class="zomato-nav-header">
     <nav class="zomato-nav-header-wrapper">
       <div class="logo">zomato</div>
@@ -317,7 +316,7 @@
     <div class="latest-update">
       see the latest ESG update
     </div>
-    </div>
+    
   </section>
 
   <section class="corporate-announcements">
@@ -498,7 +497,7 @@
       2008-2024 ©️ Zomato™️ Ltd. All rights reserv
     </div>
   </footer>
-    </div>
-</body>
+
+</div></body>
 
 </html>
